--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@angular/common": "^6.0.7",
     "@angular/compiler": "^6.0.7",
     "@angular/core": "^6.0.7",
+    "@angular/flex-layout": "^6.0.0-beta.16",
     "@angular/forms": "^6.0.7",
     "@angular/http": "^6.0.7",
     "@angular/material": "6.3.1",
     "@angular/platform-browser": "^6.0.7",
     "@angular/platform-browser-dynamic": "^6.0.7",
     "@angular/router": "^6.0.7",
+    "angularfire2": "^5.0.0-rc.11",
     "core-js": "^2.5.4",
     "firebase-tools": "^3.19.1",
     "hammerjs": "^2.0.8",
