--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "@angular/material": "6.3.1",
     "@angular/platform-browser": "^6.0.7",
     "@angular/platform-browser-dynamic": "^6.0.7",
+    "@angular/pwa": "^0.6.8",
     "@angular/router": "^6.0.7",
     "angularfire2": "^5.0.0-rc.11",
     "core-js": "^2.5.4",
+    "firebase": "^5.2.0",
     "firebase-tools": "^3.19.1",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "@angular/service-worker": "^6.0.7"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
